# Krabot-Ground-Drone-six-legged-bot-Nuclear-Hazardous-Bot

./: README.md
krab/: CMakeLists.txt  package.xml
krab/config/: config_controllers.yaml  joint_names_krab.yaml
krab/launch/: display.launch  gazebo.launch  template_launch.launch
krab/meshes/: base_link.STL  e1.STL  e2.STL  e3.STL  g1.STL  g2.STL  lbcl.STL  lccl.STL  ltl.STL  m1.STL  m2.STL  mb.STL  rccl.STL  rcl.STL  rtcl.STL  rtl.STL  tray.STL
krab/src/: fk_script.py  ik_script.py  movement.py  old_teleop.py  teleop_template.py
krab/urdf/: krab.csv  krab.urdf  my_robot_integration.urdf.xacro  output.urdf
krab/world/: competition_arena.world  emptyworld.world  world1.world  worldtry.world
