<package format="2">
  <name>krab</name>
  <version>1.0.0</version>
  <description>
    <p>URDF Description package for krab</p>
    <p>This package contains configuration data, 3D models and launch files
for krab robot</p>
  </description>
  <author>Ajinkya Parwekar</author>
  <maintainer email="ajinkyap@umd.edu" />
  <license>BSD</license>
  <buildtool_depend>catkin</buildtool_depend>
  <depend>roslaunch</depend>
  <depend>robot_state_publisher</depend>
  <depend>rviz</depend>
  <depend>joint_state_publisher_gui</depend>
  <depend>gazebo</depend>
  <build_depend>urdf</build_depend>
  <build_export_depend>urdf</build_export_depend>
  <exec_depend>urdf</exec_depend>
  <export>
    <architecture_independent />
  </export>
</package>